tried to make header

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,88 @@
+<!-- #region head -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
+    <link rel="shortcut icon" href="/images/icons/namu.png" type="image/png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <!-- #endregion -->
+  <body class="page__body">
     <script type="text/javascript" src="scripts/main.js"></script>
+    <!-- #region header -->
+    <header class="header" id="header">
+      <a href="#menu" class="icon icon--menu"></a>
+
+      <a href="#header" class="header__logo">
+        <img
+          src="/images/icons/namu.png"
+          alt="NAMU logo"
+          class="logo--img"
+        >
+      </a>
+
+      <img
+        src="/images/header-img.png"
+        alt="NAMU museum enterance"
+        class="header__image"
+      >
+
+      <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+      <a href="#tickets" class="header__tickets-link">КВИТКИ</a>
+
+    </header>
+    <!-- #endregion -->
+    <!-- #region aside menu -->
+    <aside class="menu page__menu" id="menu">
+      <a class="icon icon--close" href="#header"></a>
+
+      <div class="menu__content">
+        <nav class="nav menu__nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#gallery" class="nav__link">Галерея</a>
+            </li>
+
+            <li class="nav__item">
+              <a href="#about-us" class="nav__link">Про Нас</a>
+            </li>
+
+            <li class="nav__item">
+              <a href="events" class="nav__link">Виставки та події</a>
+            </li>
+
+            <li class="nav__item">
+              <a href="contacts" class="nav__link">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="menu__info">
+          <h4 class="info--title">Графік роботи</h4>
+          <p class="info--schedule">
+            <strong>12:00 — 20:00</strong> середа<br>
+            <strong>12:00 — 20:00</strong> четвер<br>
+            <strong>12:00 — 20:00</strong> п’ятниця<br>
+            <strong>11:00 — 19:00</strong> субота<br>
+            <strong>11:00 — 19:00</strong> неділя<br>
+          </p>
+
+          <p class="info--addition">
+            <strong>Вихідні:</strong> понеділок, вівторок<br>
+            Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+      </div>
+    </aside>
+    <!-- #endregion -->
+
+    <div class="section"></div>
   </body>
 </html>
+
