fix problem with menu-button

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
       <div class="header__img">
         <div class="header__content">
           <div class="header__top-bar">
-            <a href="#menu" class="header__button-menu"></a>
+            <a href="#menu" class="header__button-menu button-menu"></a>
             <a href="#home" class="header__logo">
               <img src="./images/logo/logo.png" alt="Logo">
             </a>
@@ -29,6 +29,7 @@
       <div class="container">
         <div class="header__art-museum art-museum">
           <div class="art-museum__content">
+            <a href="#menu" class="art-museum__button-menu button-menu"></a>
             <h1 class="art-museum__title">Художній Музей</h1>
             <a href="#" class="art-museum__button button-main">
               <p class="button-main__title">Квитки</p>
@@ -40,7 +41,7 @@
     </header>
 
     <main class="page__main main">
-      
+
     </main>
 
 
