--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,296 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="header__background-image"></div>
+
+      <div class="container">
+        <div class="top-bar">
+          <a href="#menu" class="icon icon--menu"></a>
+
+          <a href="#" class="top-bar__logo-link">
+            <img
+              src="./images/main-logo.png"
+              alt="The NA MU logo"
+              class="top-bar__logo"
+            >
+          </a>
+        </div>
+
+        <h1 class="header__title">Художній музей</h1>
+
+        <form class="header__form">
+          <label>
+            <input
+              class="header__form-input"
+              type="text"
+              placeholder="квитки"
+            >
+
+            <button class="header__form-submit" type="submit">></button>
+          </label>
+        </form>
+      </div>
+    </header>
+
+
+    <aside class="menu page__menu" id="menu">
+      <div class="container container--menu">
+        <div class="top-bar menu__top">
+          <a href="#" class="icon icon--close"></a>
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#gallery" class="nav__link">Галерея</a>
+              </li>
+
+              <li class="nav__item">
+                <a href="#" class="nav__link">Про Нас</a>
+              </li>
+            </ul>
+
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#events" class="nav__link">Виставки та події</a>
+              </li>
+
+              <li class="nav__item">
+                <a href="#contacts" class="nav__link">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div class="menu__line"></div>
+
+        <div class="menu__working-schedule">
+          <h5 class="menu__working-schedule-title">Графік роботи</h5>
+          <ul class="menu__working-schedule-list">
+            <li class="menu__working-sedule-item">12:00 - 20:00 <span class="menu__working-sedule-item-thin">середа</span></li>
+            <li class="menu__working-sedule-item">12:00 - 20:00 <span class="menu__working-sedule-item-thin">четвер</span></li>
+            <li class="menu__working-sedule-item">12:00 - 20:00 <span class="menu__working-sedule-item-thin">п'ятниця</span></li>
+            <li class="menu__working-sedule-item">11:00 - 19:00 <span class="menu__working-sedule-item-thin">субота</span></li>
+            <li class="menu__working-sedule-item">11:00 - 19:00 <span class="menu__working-sedule-item-thin">неділя</span></li>
+          </ul>
+        </div>
+
+        <p class="menu__holidays">
+          Вихідні:
+          <span class="menu__working-sedule-item-thin">
+            понеділок, вівторок
+            <br>
+            Каса припиняє роботу за 1 годину до закриття музею
+          </span>
+        </p>
+      </div>
+    </aside>
+
+    <div class="dark-theme"></div>
+
+    <main class="main">
+      <div class="container">
+        <div class="main__content">
+          <section class="events" id="events">
+            <h2 class="section-title section-title--first">Актуальні події</h2>
+
+            <picture>
+              <source media="(min-width: 1024px)" srcset="images/first-gallery-picture-desktop.png" >
+              <source media="(min-width: 576px)" srcset="images/first-gallery-picture-tablet.png">
+              <img
+                src="images/first-gallery-picture-mobile.png"
+                alt="first gallery picture"
+                class="events__photo"
+              >
+            </picture>
+
+            <div class="events__description">
+              <p class="events__description-show">виставка <span class="events__description-date">26.08 - 29.11.2019</span></p>
+
+              <h3 class="events__description-title">Йду і повертаюсь <img src="images/red-square.png" alt="red square"></h3>
+
+              <p class="events__description-about">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+
+            <picture>
+              <source media="(min-width: 1024px)" srcset="images/second-gallery-picture-desktop.png" >
+              <source media="(min-width: 576px)" srcset="images/second-gallery-picture-tablet.png">
+              <img
+                src="images/second-gallery-picture-mobile.png"
+                alt="second gallery picture"
+                class="events__photo"
+              >
+            </picture>
+
+            <div class="events__description">
+              <p class="events__description-show">виставка <span class="events__description-date">26.08 - 29.11.2019</span></p>
+
+              <h3 class="events__description-title">І спогади і мрії <img src="images/red-square.png" alt="red square"></h3>
+
+              <p class="events__description-about">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+
+
+            <div class="events__background">
+              <div class="events__description-another">
+                <p class="events__description-show">лекція <span class="events__description-date">26/08/2019 - 11:00</span></p>
+
+                <h3 class="events__description-title">Від класицизму до романтизму</h3>
+              </div>
+            </div>
+
+
+          </section>
+
+          <section class="gallery" id="gallery">
+            <h2 class="section-title">Галерея</h2>
+
+            <img
+              src="./images/image1-tablet.png"
+              alt="Slide 1"
+              class="gallery__picture gallery__picture--first-tablet"
+            >
+
+
+            <img
+              src="./images/image1-desktop.png"
+              alt="Slide 1"
+              class="gallery__picture gallery__picture--first-desktop"
+            >
+
+            <img
+              src="./images/image2.png"
+              alt="Slide 2"
+              class="gallery__picture gallery__picture--second"
+            >
+
+            <img
+              src="./images/image3.png"
+              alt="Slide 3"
+              class="gallery__picture gallery__picture--third"
+            >
+
+            <img
+              src="./images/image4.png"
+              alt="Slide 4"
+              class="gallery__picture gallery__picture--fourth"
+            >
+
+            <img
+              src="./images/image5.png"
+              alt="Slide 5"
+              class="gallery__picture gallery__picture--fifth"
+            >
+
+            <div class="gallery__ellipses">
+              <div class="gallery__ellipse gallery__ellipse--active"></div>
+              <div class="gallery__ellipse"></div>
+              <div class="gallery__ellipse"></div>
+              <div class="gallery__ellipse"></div>
+            </div>
+          </section>
+
+          <section class="subscription">
+            <div class="subscription__wrapper">
+              <div class="subscription-content">
+                <h4 class="subscription-title">Підписка</h4>
+                <p class="subscription-description">Бути в курсі всіх актуальних подій та останніх новин.</p>
+                <form class="subscription__form">
+                  <label>
+                    <input
+                      class="subscription__form-input"
+                      type="text"
+                      placeholder="E-mail"
+                    >
+
+                    <button class="subscription__form-submit" type="submit">></button>
+                  </label>
+                </form>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <section class="contacts" id="contacts">
+          <div class="contacts__wrapper">
+            <div class="contacts__wrapper-logo">
+              <a href="#" class="top-bar__logo-link">
+                <img
+                  src="./images/main-logo.png"
+                  alt="The NA MU logo"
+                  class="top-bar__logo"
+                >
+              </a>
+              <div class="contacts__wrapper-logo-icons">
+                <a href="#" class="icon icon--fb"></a>
+                <a href="#" class="icon icon--in"></a>
+              </div>
+            </div>
+            <div class="contacts__working-schedule">
+              <h5 class="contacts__working-schedule-title">Графік роботи</h5>
+              <ul class="contacts__working-schedule-list">
+                <li class="contacts__working-sedule-item">12:00 - 20:00 <span class="contacts__working-sedule-item-thin">середа</span></li>
+                <li class="contacts__working-sedule-item">12:00 - 20:00 <span class="contacts__working-sedule-item-thin">четвер</span></li>
+                <li class="contacts__working-sedule-item">12:00 - 20:00 <span class="contacts__working-sedule-item-thin">п'ятниця</span></li>
+                <li class="contacts__working-sedule-item">11:00 - 19:00 <span class="contacts__working-sedule-item-thin">субота</span></li>
+                <li class="contacts__working-sedule-item">11:00 - 19:00 <span class="contacts__working-sedule-item-thin">неділя</span></li>
+              </ul>
+              <p class="contacts__holidays">
+                Вихідні:
+                понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+            <div class="contacts__contacts">
+              <h5 class="contacts__working-schedule-title">Контакти:</h5>
+              <a href="#" class="contacts__holidays">
+                вул. М. Грушевського, 6; Київ, 01001
+                тел. +38 (044) 278-13-57
+                факс +38 (044) 278-74-54
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
+            <div class="contacts__round">
+              <a class="contacts__round-link" href="#">↑</a>
+            </div>
+            <div class="contacts__line"></div>
+            <nav class="nav nav--bottom">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="#gallery" class="nav__link nav__link--bottom">Галерея</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#" class="nav__link nav__link--bottom">Про Нас</a>
+                </li>
+              </ul>
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="#events" class="nav__link nav__link--bottom">Виставки та події</a>
+                </li>
+                <li class="nav__item">
+                  <a href="#contacts" class="nav__link nav__link--bottom">Контакти</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </section>
+      </div>
+    </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
