My second commit

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
         <form class="header__form">
           <label>
             <input
+              required
               class="header__form-input"
               type="text"
               placeholder="квитки"
@@ -54,7 +55,7 @@
               </li>
 
               <li class="nav__item">
-                <a href="#" class="nav__link">Про Нас</a>
+                <a href="#about-us" class="nav__link">Про Нас</a>
               </li>
             </ul>
 
@@ -201,7 +202,7 @@
             </div>
           </section>
 
-          <section class="subscription">
+          <section id="about-us" class="subscription">
             <div class="subscription__wrapper">
               <div class="subscription-content">
                 <h4 class="subscription-title">Підписка</h4>
@@ -209,6 +210,7 @@
                 <form class="subscription__form">
                   <label>
                     <input
+                      required
                       class="subscription__form-input"
                       type="text"
                       placeholder="E-mail"
@@ -236,8 +238,19 @@
                 >
               </a>
               <div class="contacts__wrapper-logo-icons">
-                <a href="#" class="icon icon--fb"></a>
-                <a href="#" class="icon icon--in"></a>
+                <a
+                  href="https://www.facebook.com/namu.museum/?locale=ru_RU"
+                  class="icon icon--fb"
+                  target="_blank"
+                >
+                </a>
+
+                <a
+                  href="https://www.instagram.com/namu.museum/"
+                  class="icon icon--in"
+                  target="_blank"
+                >
+                </a>
               </div>
             </div>
             <div class="contacts__working-schedule">
@@ -289,7 +302,14 @@
             </nav>
           </div>
         </section>
+
+        <div class="footer__end-wrapper">
+          <p class="footer__end-data">Designed by Zhyriada Marina</p>
+          <p class="footer__end-data">Copyright © 2019. All Rights Reserved.</p>
+        </div>
       </div>
+
+
     </footer>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
