--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
         <form class="header__form">
           <label>
             <input
+              autocomplete="on"
               required
               class="header__form-input"
               type="text"
@@ -210,6 +211,7 @@
                 <form class="subscription__form">
                   <label>
                     <input
+                      autocomplete="on"
                       required
                       class="subscription__form-input"
                       type="text"
@@ -271,12 +273,24 @@
             </div>
             <div class="contacts__contacts">
               <h5 class="contacts__working-schedule-title">Контакти:</h5>
-              <a href="#" class="contacts__holidays">
-                вул. М. Грушевського, 6; Київ, 01001
-                тел. +38 (044) 278-13-57
-                факс +38 (044) 278-74-54
-                e-mail: info@namu.kiev.ua
-              </a>
+              <div class="contacts__contacts-links">
+                <a
+                  href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/data=!4m2!3m1!1s0x40d4ce524453048d:0x49a2895b6cb43e10?sa=X&ved=2ahUKEwjIgvL0tfaAAxUJhP0HHcQ1B6oQ8gF6BAgKEAA&ved=2ahUKEwjIgvL0tfaAAxUJhP0HHcQ1B6oQ8gF6BAgNEAI"
+                  class="contacts__holidays contacts__holidays--hover"
+                  target="_blank"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+
+                <a class="contacts__holidays contacts__holidays--hover" href="tel:+38 (044) 278-13-57">
+                  тел. +38 (044) 278-13-57
+                  факс +38 (044) 278-74-54
+                </a>
+
+                <a class="contacts__holidays contacts__holidays--hover" href="mailto:info@namu.kiev.ua">
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </div>
             </div>
             <div class="contacts__round">
               <a class="contacts__round-link" href="#">↑</a>
@@ -288,7 +302,7 @@
                   <a href="#gallery" class="nav__link nav__link--bottom">Галерея</a>
                 </li>
                 <li class="nav__item">
-                  <a href="#" class="nav__link nav__link--bottom">Про Нас</a>
+                  <a href="#about-us" class="nav__link nav__link--bottom">Про Нас</a>
                 </li>
               </ul>
               <ul class="nav__list">
