--- a/src/index.html
+++ b/src/index.html
@@ -26,15 +26,11 @@
         >
       </a>
 
-      <img
-        src="/images/header-img.png"
-        alt="NAMU museum enterance"
-        class="header__image"
-      >
+      <div class="header__bottom">
+        <h1 class="header__bottom--title">ХУДОЖНІЙ МУЗЕЙ</h1>
 
-      <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
-
-      <a href="#tickets" class="header__tickets-link">КВИТКИ</a>
+        <a href="#tickets" class="header__bottom--tickets-link">КВИТКИ</a>
+      </div>
 
     </header>
     <!-- #endregion -->
@@ -54,16 +50,16 @@
             </li>
 
             <li class="nav__item">
-              <a href="events" class="nav__link">Виставки та події</a>
+              <a href="#events" class="nav__link">Виставки та події</a>
             </li>
 
             <li class="nav__item">
-              <a href="contacts" class="nav__link">Контакти</a>
+              <a href="#contacts" class="nav__link">Контакти</a>
             </li>
           </ul>
         </nav>
 
-        <div class="menu__info">
+        <div class="menu__info info">
           <h4 class="info--title">Графік роботи</h4>
           <p class="info--schedule">
             <strong>12:00 — 20:00</strong> середа<br>
@@ -81,8 +77,49 @@
       </div>
     </aside>
     <!-- #endregion -->
+    <main class="page__main">
+      <!-- #region events -->
+      <div class="section" id="events">
+        <h2 class="section__title">Актуальні події</h2>
+        <section class="event">
+          <article class="event__exhibition">
+            <img
+              src="/images/events/Rectangle 2.1.png"
+              alt="drawing of trees in yellow tones"
+              class="exhibition--image"
+            >
+            
+            <p class="exhibition--name">ВИСТАВКА</p>
+            <p class="exhibition--date">26.08-29.11.2019</p>
 
-    <div class="section"></div>
+            <h3 class="exhibition--title">Йду і повертаюсь</h3>
+
+            <p class="exhibition--description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+          </article>
+
+          <article class="event__exhibition ">
+            <img
+              src="/images/events/Rectangle 4.1.png"
+              alt="drawing of gril and a peacock"
+              class="exhibition--image"
+            >
+            <p class="exhibition--name">ВИСТАВКА</p>
+            <p class="exhibition--date">26.08-29.11.2019</p>
+            <h3 class="exhibition--title">І спогади і мрії</h3>
+            <p class="exhibition--description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+          </article>
+
+          <article class="event__lecture">
+            <div class="lecture--content">
+              <p class="lecture--name">ЛЕКЦІЯ</p>
+              <p class="lecture--date">26/08/2019 - 11:00</p>
+              <h3 class="lecture--title">Від класицизму до романтизму</h3>
+            </div>
+          </article>
+        </section>
+      </div>
+      <!-- #endregion -->
+    </main>
   </body>
 </html>
 
