--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,201 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="uk" class="page">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>NAMU</title>
+
+    <!--Style-->
+    <link rel="stylesheet" href="styles/main.scss">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header__bg"></div>
+      <div class="container">
+        <div class="header__content">
+          <div class="top-bar">
+            <a
+              href="#menu"
+              class="icon icon--open"
+              aria-label="Перейти до меню"
+            >
+            </a>
+            <a
+              href="#"
+              class="top-bar__logo"
+              aria-label="Логотип музею"
+            >
+              NA
+              <br>
+              MU
+            </a>
+          </div>
+          <div class="header__bottom">
+            <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+            <a class="header__button">
+              <span class="header__button--left">Квитки</span>
+              <span class="header__button--right"></span>
+            </a>
+
+            <span class="header__aside">ПОДІЇ</span>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <aside class="menu page__menu" id="menu">
+      <div class="container">
+        <div class="menu__content">
+          <div class="menu__top">
+            <a href="#" class="icon icon--close"></a>
+
+            <div class="nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a class="nav__link" href="#галерея">Галерея</a>
+                </li>
+
+                <li class="nav__item">
+                  <a class="nav__link" href="#про-нас">Про нас</a>
+                </li>
+
+                <li class="nav__item">
+                  <a class="nav__link" href="#виставки-та-події">Виставки та події</a>
+                </li>
+
+                <li class="nav__item">
+                  <a class="nav__link" href="#контакти">Контакти</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="menu__bottom">
+            <h3 class="menu__title">Графік роботи</h3>
+            <div class="menu__wrapper">
+              <ul class="menu__schedule">
+                <li class="menu__schedule-text">
+                  <time class="menu__schedule-text-bold">12:00 — 20:00</time>
+                  середа
+                </li>
+
+                <li class="menu__schedule-text">
+                  <time class="menu__schedule-text-bold">12:00 — 20:00</time>
+                  четвер
+                </li>
+
+                <li class="menu__schedule-text">
+                  <time class="menu__schedule-text-bold">12:00 — 20:00</time>
+                  п’ятниця
+                </li>
+
+                <li class="menu__schedule-text">
+                  <time class="menu__schedule-text-bold">11:00 — 19:00</time>
+                  субота
+                </li>
+
+                <li class="menu__schedule-text">
+                  <time class="menu__schedule-text-bold">11:00 — 19:00</time>
+                  неділя
+                </li>
+              </ul>
+
+              <p class="menu__schedule-on-weekend">
+                <strong>Вихідні:</strong> понеділок,
+                вівторок <br> Каса припиняє роботу за 1 годину до закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="menu__blur"></div>
+    </aside>
+
+    <main class="main">
+      <div class="container">
+        <div class="main__content">
+          <section class="events">
+            <h2 class="section__title events__title">Актуальні події</h2>
+
+            <div class="events__cards">
+              <section class="events__card">
+                <img
+                  src="images/events/photo-1.jpg"
+                  alt="Картина 'Йду і повертаюсь'"
+                  class="events__photo"
+                >
+
+                <div class="events__card-info">
+                  <p class="events__time">
+                    <span class="events__time--left">ВИСТАВКА</span>
+                    <time class="events__time--right">26.08-29.11.2019</time>
+                  </p>
+
+                  <h3 class="events__card-title events__card-title--orange--marker">Йду і повертаюсь</h3>
+
+                  <p class="events__description">Національний Художній Музей України презентує унікальну частину
+                    колекції
+                    Градобанку - українське мистецтво другої половини 1980-1995 років.
+                  </p>
+                </div>
+
+              </section>
+
+              <section class="events__card">
+                <img
+                  src="images/events/photo-2.jpg"
+                  alt="І спогади і мрії'"
+                  class="events__photo"
+                >
+
+                <div class="events__card-info">
+                  <p class="events__time">
+                    <span class="events__time--left">ВИСТАВКА</span>
+                    <span class="events__time--right">26.08-29.11.2019</span>
+                  </p>
+
+                  <h3 class="events__card-title events__card-title--orange--marker">І спогади і мрії</h3>
+
+                  <p class="events__description">Національний художній музей України до 100 річчя від дня народження
+                    видатної
+                    української художниці Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і
+                    мрії».
+                  </p>
+                </div>
+
+              </section>
+
+              <section class="events--lecture">
+                <div class="events__image-lecture"></div>
+
+                <div class="events__card-info-lecture">
+                  <p class="events__time-lecture">
+                    <span class="events__time--left">ЛЕКЦІЯ</span>
+                    <span class="events__time--right">26/08/2019 - 11:00</span>
+                  </p>
+
+                  <h3 class="events__card-title-lecture">Від класицизму до романтизму</h3>
+                </div>
+              </section>
+            </div>
+          </section>
+
+          <section class="gallery">
+            <h2 class="section__title">Галерея</h2>
+          </section>
+
+          <section class="subscription">
+            <h2 class="section__title">Підписка</h2>
+          </section>
+        </div>
+      </div>
+    </main>
+
+    <footer class="footer"></footer>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
