--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html
   class="page"
-  lang="en"
+  lang="uk-UA"
   id="home"
 >
   <head>
@@ -41,7 +41,108 @@
     </header>
 
     <main class="page__main main">
+      <section class="current-events section">
+        <div class="current-events__content">
+          <div class="container">
+            <h2 class="current-events__title section__title">Актуальні події</h2>
+          </div>
 
+          <div class="current-events__cards">
+            <section class="i-go-and-come-back">
+              <div class="container">
+                <div class="i-go-and-come-back__content">
+                  <article class="i-go-and-come-back__article article">
+                    <img
+                      src="./images/current-events/i-go-and-come-back.png"
+                      alt="Картина з виставки 'Йду і повертаюсь'"
+                      class="article__img"
+                    >
+
+                    <div class="article__information">
+                      <div class="article__event-description event-description">
+                        <p class="event-description__name">Виставка</p>
+                        <div class="event-description__date">26.08-29.11.2019</div>
+                      </div>
+
+                      <div class="article__title-wrapper">
+                        <h3 class="article__title current-events__subtitle">Йду і повертаюсь</h3>
+                        <div class="article__decoration-title"></div>
+                      </div>
+
+                      <p class="article__text">
+                        Національний Художній Музей України презентує унікальну частину
+                        колекції Градобанку - українське мистецтво другої
+                        половини 1980-1995 років.
+                      </p>
+                    </div>
+                  </article>
+                </div>
+              </div>
+            </section>
+
+            <section class="and-memories-and-dreams">
+              <div class="container">
+                <div class="and-memories-and-dreams__content">
+                  <article class="and-memories-and-dreams__article article">
+                    <img
+                      src="./images/current-events/and-memories-and-dreams.png"
+                      alt="Картина з виставки 'І спогади і мрії'"
+                      class="article__img"
+                    >
+
+                    <div class="article__information">
+                      <div class="article__event-description event-description">
+                        <p class="event-description__name">Виставка</p>
+                        <div class="event-description__date">26.08-29.11.2019</div>
+                      </div>
+
+                      <div class="article__title-wrapper">
+                        <h3 class="article__title current-events__subtitle">І спогади і мрії</h3>
+                        <div class="article__decoration-title"></div>
+                      </div>
+
+                      <p class="article__text">
+                        Національний художній музей України до 100 річчя від дня
+                        народження видатної української художниці
+                        Тетяни Яблонської  відкриває ретроспективну
+                        ювілейну виставку «І спогади і мрії».
+                      </p>
+                    </div>
+                  </article>
+                </div>
+              </div>
+            </section>
+
+            <section class="from-classicism-to-romanticism">
+              <div class="container">
+                <div class="from-classicism-to-romanticism__content">
+                  <div class="from-classicism-to-romanticism__event-description event-description">
+                    <p class="event-description__name">Лекція</p>
+                    <div class="event-description__date">26/08/2019 - 2019</div>
+                  </div>
+                  <h3 class="from-classicism-to-romanticism__title current-events__subtitle">Від класицизму до романтизму</h3>
+                </div>
+              </div>
+            </section>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery section">
+        <div class="container">
+          <div class="gallery__content">
+            <h2 class="gallery__title section__title">Галерея</h2>
+          </div>
+        </div>
+      </section>
+
+      <section class="subscribe section">
+        <div class="container">
+          <div class="subscribe__content">
+            <h2 class="subscribe__title section__title">Підписка</h2>
+          </div>
+        </div>
+      </section>
     </main>
 
 
