--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="./images/logo/logo.png"
+    >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -30,10 +35,13 @@
         <div class="header__art-museum art-museum">
           <div class="art-museum__content">
             <a href="#menu" class="art-museum__button-menu button-menu"></a>
+
             <h1 class="art-museum__title">Художній Музей</h1>
-            <a href="#" class="art-museum__button button-main">
-              <p class="button-main__title">Квитки</p>
-              <div class="button-main__arrow"></div>
+
+            <a href="#" class="art-museum__button">
+              <p class="art-museum__label">Квитки</p>
+
+              <div class="button-arrow"></div>
             </a>
           </div>
         </div>
@@ -140,6 +148,29 @@
         <div class="container">
           <div class="subscribe__content">
             <h2 class="subscribe__title section__title">Підписка</h2>
+
+            <p class="subscribe__text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+
+            <form
+              onsubmit="this.reset(); return false;"
+              action="#"
+              method="get"
+              class="subscribe__form"
+            >
+
+
+              <input
+                type="email"
+                class="subscribe__input"
+                name="email"
+                placeholder="E-mail"
+                required
+              >
+
+              <button class="subscribe__button button-arrow button-arrow--second-color" type="submit"></button>
+            </form>
           </div>
         </div>
       </section>
