--- a/src/index.html
+++ b/src/index.html
@@ -147,10 +147,10 @@
             <div class="events__background">
               <div class="events__description-another">
                 <p class="events__description-show">лекція <span class="events__description-date">26/08/2019 - 11:00</span></p>
-
                 <h3 class="events__description-title">Від класицизму до романтизму</h3>
               </div>
             </div>
+
 
 
           </section>
@@ -276,18 +276,18 @@
               <div class="contacts__contacts-links">
                 <a
                   href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/data=!4m2!3m1!1s0x40d4ce524453048d:0x49a2895b6cb43e10?sa=X&ved=2ahUKEwjIgvL0tfaAAxUJhP0HHcQ1B6oQ8gF6BAgKEAA&ved=2ahUKEwjIgvL0tfaAAxUJhP0HHcQ1B6oQ8gF6BAgNEAI"
-                  class="contacts__holidays contacts__holidays--hover"
+                  class="contacts__contacts-links-link contacts__holidays--hover"
                   target="_blank"
                 >
                   вул. М. Грушевського, 6; Київ, 01001
                 </a>
 
-                <a class="contacts__holidays contacts__holidays--hover" href="tel:+38 (044) 278-13-57">
+                <a class="contacts__contacts-links-link contacts__holidays--hover" href="tel:+38 (044) 278-13-57">
                   тел. +38 (044) 278-13-57
                   факс +38 (044) 278-74-54
                 </a>
 
-                <a class="contacts__holidays contacts__holidays--hover" href="mailto:info@namu.kiev.ua">
+                <a class="contacts__contacts-links-link contacts__holidays--hover" href="mailto:info@namu.kiev.ua">
                   e-mail: info@namu.kiev.ua
                 </a>
               </div>
