--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,63 @@
       </div>
     </header>
 
+
+    <aside class="page__menu menu " id="menu">
+      <div class="container">
+        <div class="menu__content">
+
+          <nav class="menu__nav nav">
+            <a href="#" class="nav__button-close button-close"></a>
+
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Про нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Виставки та події
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="menu__break-line"></div>
+
+          <div class="menu__schedule schedulee">
+            <p class="schedulee__title">Графік роботи</p>
+
+            <div class="schedulee__wrapper">
+              <ul class="schedulee__list">
+                <li class="schedulee__item"><span>12.00 — 20:00</span> середа</li>
+                <li class="schedulee__item"><span>12.00 — 20:00</span> четвер</li>
+                <li class="schedulee__item"><span>12.00 — 20:00</span> п&#39;ятниця</li>
+                <li class="schedulee__item"><span>12.00 — 20:00</span> субота</li>
+                <li class="schedulee__item"><span>12.00 — 20:00</span> неділя</li>
+              </ul>
+
+              <p class="schedulee__more-information">
+                <span>Вихідні:</span> понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годинудо закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
     <main class="page__main main">
       <section class="current-events section">
         <div class="current-events__content">
