add link to contacts section and scale on logo hover

--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
                 </li>
 
                 <li class="nav__item">
-                  <a href="#" class="nav__link">Контакти</a>
+                  <a href="#contacts" class="nav__link">Контакти</a>
                 </li>
               </ul>
             </nav>
@@ -264,7 +264,7 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer" id="contacts">
       <div class="container">
         <div class="footer__content">
           <div class="footer__top">
@@ -368,7 +368,7 @@
                 </li>
 
                 <li class="nav__item">
-                  <a href="#" class="nav__link">Контакти</a>
+                  <a href="#contacts" class="nav__link">Контакти</a>
                 </li>
               </ul>
             </nav>
