add label for form input and disable eslint in swiper.js

--- a/src/index.html
+++ b/src/index.html
@@ -251,10 +251,15 @@
               onsubmit="this.reset(); return false;"
               class="subscription__form subscription-form"
             >
+              <label for="subscription-form__input" class="subscription-form__label">
+                Email
+              </label>
+              
               <input
                 required
                 type="email"
                 placeholder="E-mail"
+                id="subscription-form__input"
                 class="subscription-form__input"
               >
               <button class="subscription-form__button icon icon--arrow-right"></button>
