Solution on Footer and Subscription section

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
             </a>
             <a
               href="#"
-              class="top-bar__logo"
+              class="icon--logo top-bar__logo"
               aria-label="Логотип музею"
             >
               NA
@@ -52,7 +52,7 @@
           <div class="menu__top">
             <a href="#" class="icon icon--close"></a>
 
-            <div class="nav">
+            <nav class="nav">
               <ul class="nav__list">
                 <li class="nav__item">
                   <a class="nav__link" href="#галерея">Галерея</a>
@@ -70,40 +70,40 @@
                   <a class="nav__link" href="#контакти">Контакти</a>
                 </li>
               </ul>
-            </div>
+            </nav>
           </div>
 
           <div class="menu__bottom">
-            <h3 class="menu__title">Графік роботи</h3>
+            <h4 class="menu__title">Графік роботи</h4>
             <div class="menu__wrapper">
-              <ul class="menu__schedule">
-                <li class="menu__schedule-text">
-                  <time class="menu__schedule-text-bold">12:00 — 20:00</time>
+              <ul class="schedule">
+                <li class="schedule__text">
+                  <time class="schedule__text--bold">12:00 — 20:00</time>
                   середа
                 </li>
 
-                <li class="menu__schedule-text">
-                  <time class="menu__schedule-text-bold">12:00 — 20:00</time>
+                <li class="schedule__text">
+                  <time class="schedule__text--bold">12:00 — 20:00</time>
                   четвер
                 </li>
 
-                <li class="menu__schedule-text">
-                  <time class="menu__schedule-text-bold">12:00 — 20:00</time>
+                <li class="schedule__text">
+                  <time class="schedule__text--bold">12:00 — 20:00</time>
                   п’ятниця
                 </li>
 
-                <li class="menu__schedule-text">
-                  <time class="menu__schedule-text-bold">11:00 — 19:00</time>
+                <li class="schedule__text">
+                  <time class="schedule__text--bold">11:00 — 19:00</time>
                   субота
                 </li>
 
-                <li class="menu__schedule-text">
-                  <time class="menu__schedule-text-bold">11:00 — 19:00</time>
+                <li class="schedule__text">
+                  <time class="schedule__text--bold">11:00 — 19:00</time>
                   неділя
                 </li>
               </ul>
 
-              <p class="menu__schedule-on-weekend">
+              <p class="schedule__on-weekend">
                 <strong>Вихідні:</strong> понеділок,
                 вівторок <br> Каса припиняє роботу за 1 годину до закриття музею
               </p>
@@ -115,9 +115,9 @@
     </aside>
 
     <main class="main">
-      <div class="container">
-        <div class="main__content">
-          <section class="events">
+      <div class="main__content">
+        <section class="events">
+          <div class="container">
             <h2 class="section__title events__title">Актуальні події</h2>
 
             <div class="events__cards">
@@ -141,7 +141,6 @@
                     Градобанку - українське мистецтво другої половини 1980-1995 років.
                   </p>
                 </div>
-
               </section>
 
               <section class="events__card">
@@ -181,20 +180,167 @@
                 </div>
               </section>
             </div>
-          </section>
+          </div>
+        </section>
 
-          <section class="gallery">
-            <h2 class="section__title">Галерея</h2>
-          </section>
+        <section class="gallery">
+          <div class="container">
+            <h2 class="section__title gallery__title">Галерея</h2>
 
-          <section class="subscription">
-            <h2 class="section__title">Підписка</h2>
-          </section>
-        </div>
+            <div class="gallery__content"></div>
+          </div>
+        </section>
+
+        <section class="subscription">
+          <div class="container">
+            <div class="subscription__content">
+              <h2 class="section__title subscription__title">Підписка</h2>
+
+              <p class="subscription__text">Бути в курсі всіх актуальних подій та останніх новин.</p>
+
+              <form
+                class="subscription__button"
+                action="#"
+                method="post"
+              >
+                <input
+                  type="email"
+                  class="subscription__button--left"
+                  placeholder="E-mail"
+                ></input>
+                <button type="submit" class="subscription__button--right"></button>
+              </form>
+            </div>
+          </div>
+        </section>
       </div>
     </main>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__link">
+            <a
+              href="#"
+              class="icon--logo"
+              aria-label="Логотип музею"
+            >
+              NA
+              <br>
+              MU
+            </a>
+
+            <ul class="social">
+              <li class="social__item-fb">
+                <a href="#">
+                  <img
+                    src="images/icons/icon-facebook.svg"
+                    alt="Link for Facebook"
+                    class="social__link"
+                  >
+                </a>
+              </li>
+              <li class="social__item-inst">
+                <a href="#">
+                  <img
+                    src="images/icons/icon-instagram.svg"
+                    alt="Link for Instagram"
+                    class="social__link"
+                  >
+                </a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer__schedule">
+            <h4 class="footer__schedule-title">Графік роботи</h4>
+
+            <ul class="schedule">
+              <li class="schedule__text">
+                <time class="schedule__text--bold">12:00 — 20:00</time>
+                середа
+              </li>
+
+              <li class="schedule__text">
+                <time class="schedule__text--bold">12:00 — 20:00</time>
+                четвер
+              </li>
+
+              <li class="schedule__text">
+                <time class="schedule__text--bold">12:00 — 20:00</time>
+                п’ятниця
+              </li>
+
+              <li class="schedule__text">
+                <time class="schedule__text--bold">11:00 — 19:00</time>
+                субота
+              </li>
+
+              <li class="schedule__text">
+                <time class="schedule__text--bold">11:00 — 19:00</time>
+                неділя
+              </li>
+            </ul>
+
+            <p class="schedule__on-weekend">
+              <strong>Вихідні:</strong> понеділок,
+              вівторок <br> Каса припиняє роботу за 1 годину до закриття музею
+            </p>
+          </div>
+
+          <div class="contact footer__contact">
+            <h4 class="contact__title footer__contact-title">Контакти:</h4>
+
+            <ul class="contact__list">
+              <li class="contact__item">
+                <a href="#" class="contact__link">вул. М. Грушевського, 6; Київ, 01001</a>
+              </li>
+
+              <li class="contact__item">
+                <a href="tel:+380442781357" class="contact__link">тел. +38 (044) 278-13-57</a>
+              </li>
+
+              <li class="contact__item">
+                <a href="tel:+380442787454" class="contact__link">факс +38 (044) 278-74-54</a>
+              </li>
+
+              <li class="contact__item">
+                <a href="mailto:info@namu.kiev.ua" class="contact__link"> e-mail: info@namu.kiev.ua</a>
+              </li>
+            </ul>
+          </div>
+
+          <div class="footer__line">
+            <a href="#home"></a>
+          </div>
+
+          <ul class="footer__list-media footer__nav">
+            <li class="footer__item">
+              <a href="#gallery" class="footer__item-link">Галерея</a>
+            </li>
+
+            <li class="footer__item">
+              <a href="#events" class="footer__item-link">Виставки та події</a>
+            </li>
+          </ul>
+
+          <ul class="footer__list-about footer__nav">
+            <li class="footer__item">
+              <a href="#subscribe" class="footer__item-link">Про Нас</a>
+            </li>
+
+            <li class="footer__item">
+              <a href="#contact" class="footer__item-link">Контакти</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer__copyright">
+          <span>Copyright © 2023. All Rights Reserved.</span>
+          <span>Designed by Zhyriada Marina</span>
+        </div>
+      </div>
+    </footer>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
