--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
           <a href="#" class="top-bar__logo-link">
             <img
-              src="./images/main-logo.png"
+              src="./images/main-logo.svg"
               alt="The NA MU logo"
               class="top-bar__logo"
             >
@@ -41,6 +41,8 @@
             <button class="header__form-submit" type="submit">></button>
           </label>
         </form>
+
+        <a class="events-logo" href="#events">події</a>
       </div>
     </header>
 
@@ -143,15 +145,12 @@
               </p>
             </div>
 
-
             <div class="events__background">
               <div class="events__description-another">
                 <p class="events__description-show">лекція <span class="events__description-date">26/08/2019 - 11:00</span></p>
                 <h3 class="events__description-title">Від класицизму до романтизму</h3>
               </div>
             </div>
-
-
 
           </section>
 
@@ -205,22 +204,23 @@
 
           <section id="about-us" class="subscription">
             <div class="subscription__wrapper">
-              <div class="subscription-content">
-                <h4 class="subscription-title">Підписка</h4>
-                <p class="subscription-description">Бути в курсі всіх актуальних подій та останніх новин.</p>
-                <form class="subscription__form">
-                  <label>
-                    <input
-                      autocomplete="on"
-                      required
-                      class="subscription__form-input"
-                      type="text"
-                      placeholder="E-mail"
-                    >
-
-                    <button class="subscription__form-submit" type="submit">></button>
-                  </label>
-                </form>
+              <div class="container">
+                <div class="subscription-content">
+                  <h4 class="subscription-title">Підписка</h4>
+                  <p class="subscription-description">Бути в курсі всіх актуальних подій та останніх новин.</p>
+                  <form class="subscription__form">
+                    <label>
+                      <input
+                        autocomplete="on"
+                        required
+                        class="subscription__form-input"
+                        type="text"
+                        placeholder="E-mail"
+                      >
+                      <button class="subscription__form-submit" type="submit">></button>
+                    </label>
+                  </form>
+                </div>
               </div>
             </div>
           </section>
@@ -234,7 +234,7 @@
             <div class="contacts__wrapper-logo">
               <a href="#" class="top-bar__logo-link">
                 <img
-                  src="./images/main-logo.png"
+                  src="./images/main-logo.svg"
                   alt="The NA MU logo"
                   class="top-bar__logo"
                 >
