Add some changes

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
                 <a href="#gallery" class="nav__link">Галерея</a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link">Про Нас</a>
+                <a href="#subscription" class="nav__link">Про Нас</a>
               </li>
               <li class="nav__item">
                 <a href="#events" class="nav__link">Виставки та події</a>
@@ -251,7 +251,7 @@
         </article>
       </section>
 
-      <section class="main-content__subscription subscription">
+      <section class="main-content__subscription subscription" id="subscription">
         <article class="subscription__content">
           <img
             src="./images/subscribe_bg-dark.jpg"
@@ -352,14 +352,20 @@
               class="contacts__address text-link"
               target="_blank"
             >
-              вул. М. Грушевського, 6; Київ, 01001
+              <span class="text-link__name">вул.</span> М. Грушевського, 6; Київ, 01001
             </a>
             <br>
-            <a href="tel:+38 (044) 278-13-57" class="contacts__tel text-link">тел. +38 (044) 278-13-57</a>
+            <a href="tel:+38 (044) 278-13-57" class="contacts__tel text-link">
+              <span class="text-link__name">тел.</span> +38 (044) 278-13-57
+            </a>
             <br>
-            <a href="tel:+38 (044) 278-74-54" class="contacts__fax text-link"> факс +38 (044) 278-74-54</a>
+            <a href="tel:+38 (044) 278-74-54" class="contacts__fax text-link">
+              <span class="text-link__name">факс</span> +38 (044) 278-74-54
+            </a>
             <br>
-            <a href="mailto:info@namu.kiev.ua" class="contacts__email text-link"> e-mail: info@namu.kiev.ua</a>
+            <a href="mailto:info@namu.kiev.ua" class="contacts__email text-link">
+              <span class="text-link__name">e-mail:</span> info@namu.kiev.ua
+            </a>
           </div>
         </div>
       </div>
@@ -376,7 +382,7 @@
             <a href="#gallery" class="nav__link footer__link">Галерея</a>
           </li>
           <li class="nav__item footer__item">
-            <a href="#" class="nav__link footer__link">Про Нас</a>
+            <a href="#subscription" class="nav__link footer__link">Про Нас</a>
           </li>
           <li class="nav__item footer__item">
             <a href="#events" class="nav__link footer__link">Виставки та події</a>
@@ -393,58 +399,6 @@
       </div>
     </footer>
 
-    <!-- <script type="text/javascript">
-      let currentIndex = 0;
-      let interval;
-
-      function switchSlide() {
-        currentIndex = (currentIndex + 1) % 4;
-        document.getElementById(`radio${currentIndex + 1}`).checked = true;
-      }
-
-      function startSlider() {
-        if (interval) {
-          stopSlider();
-        }
-
-        interval = setInterval(switchSlide, 2000);
-      }
-
-      function stopSlider() {
-        // currentIndex = 0;
-        clearInterval(interval);
-      }
-
-      function checkWindowSize() {
-        if (window.innerWidth < 1280) {
-          startSlider();
-        } else {
-          stopSlider();
-        }
-      }
-
-      checkWindowSize();
-
-      window.addEventListener('resize', () => {
-        if (interval) {
-          document.getElementById('radio1').checked = true;
-          currentIndex = 0;
-          stopSlider();
-          checkWindowSize();
-        }
-        checkWindowSize();
-      });
-
-      document.querySelectorAll('input[name="radio-btn"]').forEach((radio, index) => {
-        radio.addEventListener('click', () => {
-          stopSlider();
-          currentIndex = index;
-          setTimeout(() => {
-            checkWindowSize();
-          }, 5000);
-        });
-      });
-    </script> -->
     <script type="text/javascript" src="./scripts/main.js"></script>
   </body>
 </html>
