develop footer for all screens

--- a/src/index.html
+++ b/src/index.html
@@ -82,19 +82,19 @@
 
           <div class="menu__break-line"></div>
 
-          <div class="menu__schedule schedulee">
-            <p class="schedulee__title">Графік роботи</p>
+          <div class="menu__schedule schedule">
+            <p class="schedule__title">Графік роботи</p>
 
-            <div class="schedulee__wrapper">
-              <ul class="schedulee__list">
-                <li class="schedulee__item"><span>12.00 — 20:00</span> середа</li>
-                <li class="schedulee__item"><span>12.00 — 20:00</span> четвер</li>
-                <li class="schedulee__item"><span>12.00 — 20:00</span> п&#39;ятниця</li>
-                <li class="schedulee__item"><span>12.00 — 20:00</span> субота</li>
-                <li class="schedulee__item"><span>12.00 — 20:00</span> неділя</li>
+            <div class="schedule__wrapper">
+              <ul class="schedule__list">
+                <li class="schedule__item"><span>12.00 — 20:00</span> середа</li>
+                <li class="schedule__item"><span>12.00 — 20:00</span> четвер</li>
+                <li class="schedule__item"><span>12.00 — 20:00</span> п&#39;ятниця</li>
+                <li class="schedule__item"><span>12.00 — 20:00</span> субота</li>
+                <li class="schedule__item"><span>12.00 — 20:00</span> неділя</li>
               </ul>
 
-              <p class="schedulee__more-information">
+              <p class="schedule__more-information">
                 <span>Вихідні:</span> понеділок, вівторок
                 <br>
                 Каса припиняє роботу за 1 годинудо закриття музею
@@ -233,6 +233,115 @@
       </section>
     </main>
 
+    <footer class="page__footer footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__top-bar">
+            <a href="#home" class="footer__logo">
+              <img src="./images/logo/logo.png" alt="Logo">
+            </a>
+
+            <div class="footer__social-media">
+              <a href="#" class="footer__facebook-icon"></a>
+              <a href="#" class="footer__instagram-icon"></a>
+            </div>
+          </div>
+
+          <div class="footer__middle">
+            <div class="footer__schedule schedule">
+              <p class="schedule__title">Графік роботи</p>
+
+              <div class="schedule__wrapper schedule__wrapper--onTable-direction--column">
+                <ul class="schedule__list">
+                  <li class="schedule__item"><span>12.00 — 20:00</span> середа</li>
+                  <li class="schedule__item"><span>12.00 — 20:00</span> четвер</li>
+                  <li class="schedule__item"><span>12.00 — 20:00</span> п&#39;ятниця</li>
+                  <li class="schedule__item"><span>12.00 — 20:00</span> субота</li>
+                  <li class="schedule__item"><span>12.00 — 20:00</span> неділя</li>
+                </ul>
+
+                <p class="schedule__more-information">
+                  <span>Вихідні:</span> понеділок, вівторок
+                  <br>
+                  Каса припиняє роботу за 1 годинудо закриття музею
+                </p>
+              </div>
+            </div>
+
+            <div class="footer__contact-us contact-us">
+              <p class="contact-us__title">Контакти:</p>
+
+              <ul class="contact-us__list">
+                <li class="contact-us__item">
+                  <a
+                    target="_blank"
+                    href="https://www.google.com/maps/place/%D0%B2%D1%83%D0%BB%D0%B8%D1%86%D1%8F+%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D1%97%D0%B2,+02000/data=!4m2!3m1!1s0x40d4ce524453048d:0x49a2895b6cb43e10?sa=X&ved=2ahUKEwir7tvln_uAAxWTLBAIHXRNAlEQ8gF6BAgVEAA&ved=2ahUKEwir7tvln_uAAxWTLBAIHXRNAlEQ8gF6BAgYEAI"
+                    class="contact-us__link"
+                  >
+                    вул. М. Грушевського, 6; Київ, 01001
+                  </a>
+                </li>
+
+                <li class="contact-us__item">
+                  <a href="tel:+38 044 278-13-57" class="contact-us__link">
+                    тел. +38 (044) 278-13-57
+                  </a>
+                </li>
+
+                <li class="contact-us__item">
+                  <a href="tel:+38 044 278-74-54" class="contact-us__link">
+                    факс +38 (044) 278-74-54
+                  </a>
+                </li>
+
+                <li class="contact-us__item">
+                  <a href="mailto:hello@nothing.com" class="contact-us__link">
+                    e-mail: info@namu.kiev.ua
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <a href="#home" class="footer__top-icons">
+
+          </a>
+
+          <div class="footer__break-line"></div>
+
+
+          <nav class="footer__nav nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Про нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Виставки та події
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="footer__copy-right copy-right">
+            <p class="copy-right__degined">Designed by Zhyriada Marina</p>
+            <p class="copy-right__yaer">Copyright © 2019. All Rights Reserved.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
