add hover and href for all buttons and link

--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,7 @@
         <div class="header__content">
           <div class="header__top-bar">
             <a href="#menu" class="header__button-menu button-menu"></a>
-            <a href="#home" class="header__logo">
-              <img src="./images/logo/logo.png" alt="Logo">
-            </a>
+            <a href="#home" class="header__logo logo"></a>
           </div>
         </div>
       </div>
@@ -38,7 +36,7 @@
 
             <h1 class="art-museum__title">Художній Музей</h1>
 
-            <a href="#" class="art-museum__button">
+            <a href="#current-events" class="art-museum__button">
               <p class="art-museum__label">Квитки</p>
 
               <div class="button-arrow"></div>
@@ -58,22 +56,22 @@
 
             <ul class="nav__list">
               <li class="nav__item">
-                <a href="#" class="nav__link">
+                <a href="#gallery" class="nav__link">
                   Галерея
                 </a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link">
+                <a href="#subscribe" class="nav__link">
                   Про нас
                 </a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link">
+                <a href="#current-events" class="nav__link">
                   Виставки та події
                 </a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link">
+                <a href="#contact-us" class="nav__link">
                   Контакти
                 </a>
               </li>
@@ -106,7 +104,7 @@
     </aside>
 
     <main class="page__main main">
-      <section class="current-events section">
+      <section class="current-events section" id="current-events">
         <div class="current-events__content">
           <div class="container">
             <h2 class="current-events__title section__title">Актуальні події</h2>
@@ -193,7 +191,7 @@
         </div>
       </section>
 
-      <section class="gallery section">
+      <section class="gallery section" id="gallery">
         <div class="container">
           <div class="gallery__content">
             <h2 class="gallery__title section__title">Галерея</h2>
@@ -201,7 +199,7 @@
         </div>
       </section>
 
-      <section class="subscribe section">
+      <section class="subscribe section" id="subscribe">
         <div class="container">
           <div class="subscribe__content">
             <h2 class="subscribe__title section__title">Підписка</h2>
@@ -237,13 +235,22 @@
       <div class="container">
         <div class="footer__content">
           <div class="footer__top-bar">
-            <a href="#home" class="footer__logo">
-              <img src="./images/logo/logo.png" alt="Logo">
-            </a>
+            <a href="#home" class="footer__logo logo"></a>
+
 
             <div class="footer__social-media">
-              <a href="#" class="footer__facebook-icon"></a>
-              <a href="#" class="footer__instagram-icon"></a>
+              <a
+                href="https://www.facebook.com/namu.museum/"
+                target="_blank" class="footer__facebook-icon"
+              >
+              </a>
+
+              <a
+                href="https://www.instagram.com/namu.museum/"
+                target="_blank"
+                class="footer__instagram-icon"
+              >
+              </a>
             </div>
           </div>
 
@@ -251,7 +258,7 @@
             <div class="footer__schedule schedule">
               <p class="schedule__title">Графік роботи</p>
 
-              <div class="schedule__wrapper schedule__wrapper--onTable-direction--column">
+              <div class="schedule__wrapper">
                 <ul class="schedule__list">
                   <li class="schedule__item"><span>12.00 — 20:00</span> середа</li>
                   <li class="schedule__item"><span>12.00 — 20:00</span> четвер</li>
@@ -268,7 +275,7 @@
               </div>
             </div>
 
-            <div class="footer__contact-us contact-us">
+            <div class="footer__contact-us contact-us" id="contact-us">
               <p class="contact-us__title">Контакти:</p>
 
               <ul class="contact-us__list">
@@ -303,32 +310,29 @@
             </div>
           </div>
 
-          <a href="#home" class="footer__top-icons">
-
-          </a>
+          <a href="#home" class="footer__top-icons"></a>
 
           <div class="footer__break-line"></div>
-
 
           <nav class="footer__nav nav">
             <ul class="nav__list">
               <li class="nav__item">
-                <a href="#" class="nav__link">
+                <a href="#gallery" class="nav__link nav__link--hover-under-line--second-color">
                   Галерея
                 </a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link">
+                <a href="#subscribe" class="nav__link nav__link--hover-under-line--second-color">
                   Про нас
                 </a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link">
+                <a href="#current-events" class="nav__link nav__link--hover-under-line--second-color">
                   Виставки та події
                 </a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link">
+                <a href="#contact-us" class="nav__link nav__link--hover-under-line--second-color">
                   Контакти
                 </a>
               </li>
