fix issues according to mentor's suggestions

--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,7 @@
     <title>Museum</title>
     <link rel="icon" href="./images/favicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link
-      rel="preconnect"
-      href="https://fonts.gstatic.com"
-      crossorigin="true"
-    >
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css">
     <link rel="stylesheet" href="./styles/style.scss">
@@ -254,7 +250,7 @@
               <label for="subscription-form__input" class="subscription-form__label">
                 Email
               </label>
-              
+
               <input
                 required
                 type="email"
@@ -341,11 +337,11 @@
                 </li>
 
                 <li class="contacts__item">
-                  <a href="tel:+38 (044) 278-13-57">тел. +38 (044) 278-13-57</a>
+                  <a href="tel:+38(044)278-13-57">тел. +38 (044) 278-13-57</a>
                 </li>
 
                 <li class="contacts__item">
-                  <a href="tel:+38 (044) 278-74-54">факс +38 (044) 278-74-54</a>
+                  <a href="tel:+38(044)278-74-54">факс +38 (044) 278-74-54</a>
                 </li>
 
                 <li class="contacts__item">
